@@ -1,4 +1,8 @@
 Changes since CEXP-2.0.beta
+ 2011/07/15:
+ - Makefile.am: export rtems_bsp, RTEMS_BSP, enable_rtemsbsp, package_subdir
+   variables so third-party makefiles 'inherit' them (in case any is embedded
+   in an installation path/prefix).
  2010/06/10:
  - configure.ac: check for multilibbed cpukit only if host_os is RTEMS.
  2010/05/06:
